# code-jam-2023

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  README.md  pyproject.toml
.github/workflows/: lint.yaml
game/: __main__.py  config.py
game/assets/fonts/: License.txt
game/assets/world_map/: color_mapping.json  country_coordinates.json
game/manager/: game_manager.py  image_manager.py
game/screens/: main_menu.py  options_menu.py
game/screens/game/: countries.py  utils.py  world_map.py
game/ui/: main_menu.py  manager.py  theme.json
game/utils/: countries_svgs.py  debug.py  helpers.py
utils/: countries_svgs.py
